new tab open when link clicked

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="banner">
         <h2>"SEO without content is like an ice cream cone without the ice cream." </h2>
         <h1>SEO RANKING</h1>
-        <a href="https://searchengineland.com/guide/what-is-seo" class="btn banner-btn">view more</a>
+        <a href="https://searchengineland.com/guide/what-is-seo" target="_blank" class="btn banner-btn">view more</a>
     </div>
  </header>
  
